# SLV258--

./: .gitignore  gbk_to_utf8.py  patch_lcd.py  to_utf8.py
1.代码/: add_fonts.py  字符字库.txt  引脚连接.txt  界面设计.txt  触摸屏参数.txt
1.代码/IC&Code/: ST7789V_TN_Code.txt
1.代码/STM32F1_ST7789_16Bit  Demo_V1/: CMakeLists.txt  STM32F103C8_FLASH.ld
1.代码/STM32F1_ST7789_16Bit  Demo_V1/HARDWARE/LCD/: FONT.H  LCD.c  LCD.h
1.代码/STM32F1_ST7789_16Bit  Demo_V1/HARDWARE/TEST/: test code.c
1.代码/STM32F1_ST7789_16Bit  Demo_V1/HARDWARE/TOUCH/: ctiic.h  touch.c  touch.h
1.代码/STM32F1_ST7789_16Bit  Demo_V1/HARDWARE/UI/: ui_main.c  ui_main.h  ui_mechanics_detail.c  ui_mechanics_detail.h  ui_mechanics_menu.c  ui_mechanics_menu.h  ui_settings_detail.c  ui_settings_detail.h  ui_settings_menu.c  ui_settings_menu.h  ui_signal_detail.c  ui_signal_detail.h  ui_signal_menu.c  ui_signal_menu.h  ui_timing_detail.c  ui_timing_detail.h  ui_timing_menu.c  ui_timing_menu.h
1.代码/STM32F1_ST7789_16Bit  Demo_V1/USER/: JLinkLog.txt  test.c  test.uvguix.jmc  test.uvoptx  test.uvprojx
1.代码/副本/USER/: test.c  test.uvguix.jmc
1.代码/图片&字符取模工具/PCtoLCD2002完美版/: PCtoLCD2002.INI
2.原理图和PCB/: PCB_PCB_SLV258-存贮式数字毫秒计项目_2026-06-08.json  SCH_SLV258-存贮式数字毫秒计项目_2026-06-08.json
3.功能需求文件/: J0201-LCM计时器说明书.doc  LCM带图参数说明（周期、速度）.docx  主界面设计图.txt  信号与时标的界面.txt  力学实验专项的界面.txt  系统设置界面.txt
5.测试代码/LED灯测试代码/: JLinkLog.txt  Project.uvguix.jmc  Project.uvoptx  Project.uvprojx
5.测试代码/LED灯测试代码/Listings/: Project.map  startup_stm32f10x_md.lst
5.测试代码/LED灯测试代码/Objects/: Project.axf  Project.build_log.htm  Project.htm  core_cm3.crf  (+29 more)
(+48 files in other folders)
